feat: edges are now drawn if loaded by storage layer

--- a/apps/vaev/frontend/css/style.css
+++ b/apps/vaev/frontend/css/style.css
@@ -376,7 +376,7 @@ select {
 	cursor: grab;
 }
 
-.node-type-select {
+.type-select {
 	position: fixed;
 	background-color: var(--background-secondary);
 	border: var(--small-border);
