--- a/apps/vaev/views/graph/graph.templ
+++ b/apps/vaev/views/graph/graph.templ
@@ -55,29 +55,17 @@ templ Main(app *pocketbase.PocketBase, project_id string) {
 			@header()
 			@ControlPanelSection("Sorting", "graph_7") {
 				<div class="control-panel__button-group">
-					<button data-on-click="window.driver.graph.sortNodes()" title="Fruchterman-Reingold esque sorting">
-						<span class="material-symbols">graph_3</span>
-					</button>
-					<button title="Hierarchy based sorting" disabled>
-						<span class="material-symbols">graph_1</span>
-					</button>
+					<graph-btn action="sort_force" icon="graph_3" title="Fruchterman-Reingold esque sorting"></graph-btn>
+					<graph-btn disabled action="sort_force" icon="graph_1" title="Hierarchy based sorting"></graph-btn>
 				</div>
 			}
 			<div data-show="$selectedTool == 0">
 				@ControlPanelSection("Position", "align_justify_stretch") {
 					<div class="control-panel__button-group">
-						<button data-on-click="window.driver.distributeNodes('horizontal')">
-							<span class="material-symbols">align_justify_space_even</span>
-						</button>
-						<button data-on-click="window.driver.distributeNodes('vertical')">
-							<span class="material-symbols">align_space_even</span>
-						</button>
-						<button data-on-click="window.driver.alignNodes('vertical')">
-							<span class="material-symbols">align_horizontal_center</span>
-						</button>
-						<button data-on-click="window.driver.alignNodes('horizontal')">
-							<span class="material-symbols">align_vertical_center</span>
-						</button>
+						<graph-btn action="distribute_vertical" icon="align_space_even"></graph-btn>
+						<graph-btn action="distribute_horizontal" icon="align_justify_space_even"></graph-btn>
+						<graph-btn action="align_vertical" icon="align_horizontal_center"></graph-btn>
+						<graph-btn action="align_horizontal" icon="align_vertical_center"></graph-btn>
 					</div>
 				}
 			</div>
@@ -121,7 +109,7 @@ templ Main(app *pocketbase.PocketBase, project_id string) {
 			</form>
 		</dialog>
 		<script type="module">
-			import {PBStore, driver, throttle} from "/dist/graph.js";
+			import {PBStore, driver} from "/dist/graph.js";
 			const store = new PBStore({{project_id}})
 			document.addEventListener("DOMContentLoaded", () => {
 				driver.run(store).then(graph => {
